--- a/templates/base.html
+++ b/templates/base.html
@@ -29,13 +29,10 @@
       <ul class="navbar-nav me-auto">
         <li class="nav-item"><a class="nav-link" href="{{ url_for('list_players') }}">{{ _('Players') }}</a></li>
         <li class="nav-item"><a class="nav-link" href="{{ url_for('events_calendar') }}">{{ _('Calendar') }}</a></li>
+        <li class="nav-item"><a class="nav-link" href="{{ url_for('event_list') }}">{{ _('Event List') }}</a></li>
         {% if session.get('is_admin') %}
           <li class="nav-item"><a class="nav-link" href="{{ url_for('fees_report') }}">{{ _('Fees Report') }}</a></li>
           <li class="nav-item"><a class="nav-link" href="{{ url_for('create_player') }}">{{ _('+ Add Player') }}</a></li>
-          {% set migrate_url = safe_url_for('migrate') %}
-          {% if migrate_url %}
-            <li class="nav-item"><a class="nav-link" href="{{ migrate_url }}">{{ _('Run DB migration') }}</a></li>
-          {% endif %}
         {% endif %}
       </ul>
 
